
SUBDIRS = common mathml boxml adapters

noinst_LTLIBRARIES = libengine.la

libengine_la_LIBADD = \
  $(top_builddir)/src/engine/adapters/libadapters.la \
  $(top_builddir)/src/engine/mathml/libmathml.la \
  $(top_builddir)/src/engine/boxml/libboxml.la \
  $(top_builddir)/src/engine/common/libengine_common.la

libengine_la_SOURCES = 
