
if COND_CUSTOM_READER
  MAYBE_CUSTOM_READER = custom_reader
else
  MAYBE_CUSTOM_READER =
endif

if COND_LIBXML2_READER
  MAYBE_LIBXML2_READER = libxml2_reader
else
  MAYBE_LIBXML2_READER =
endif

if COND_LIBXML2
  MAYBE_LIBXML2 = libxml2
else
  MAYBE_LIBXML2 =
endif

if COND_GMETADOM
  MAYBE_GMETADOM = gmetadom
else
  MAYBE_GMETADOM =
endif

SUBDIRS = common $(MAYBE_CUSTOM_READER) $(MAYBE_LIBXML2_READER) $(MAYBE_LIBXML2) $(MAYBE_GMETADOM)

