
NULL =

noinst_LTLIBRARIES = libadapters.la

libadapters_la_SOURCES = \
  BoxMLMathMLAdapter.cc \
  MathMLBoxMLAdapter.cc \
  $(NULL)

noinst_HEADERS = \
  BoxMLMathMLAdapter.hh \
  MathMLBoxMLAdapter.hh \
  $(NULL)

INCLUDES = \
  -I$(top_builddir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/common/mathvariants \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/engine/mathml \
  -I$(top_srcdir)/src/engine/boxml \
  -I$(top_srcdir)/src/formatter/common \
  -I$(top_srcdir)/src/formatter/areamodel \
  -I$(top_srcdir)/src/formatter/boxml_graphic_device \
  -I$(top_srcdir)/src/formatter/mathml_graphic_device \
  $(NULL)

